# kneecap-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  base.css  docker-compose.yml  entrypoint-dev.ps1  entrypoint-dev.sh  entrypoint.sh  example.env  flake.nix  manage.py  pyproject.toml
.github/workflows/: docker-image.yml
ad_detect/: apps.py  service.py
api/: urls.py  views.py
dashboard/: views.py
dashboard/templates/: base.html  dashboard.html  feed.html  jobs.html  subscriptions.html
examples/: docker-compose.quickstart.yml
feeds/: generate.py
kneecap/: asgi.py  settings.py  urls.py  wsgi.py
kneecap_backend/: manage.py  urls.py
kneecap_backend/api/: serializers.py  urls.py  views.py
kneecap_backend/feed/: urls.py  views.py
kneecap_backend/kneecap_backend/: asgi.py  settings.py  urls.py  wsgi.py
kneecap_backend/mirror/: models.py  tests.py  urls.py  views.py
kneecap_backend/opml/: apps.py  urls.py  views.py
kneecap_backend/rss/: forms.py  models.py  tests.py  urls.py  views.py
kneecap_backend/scripts/: e2e.ps1  rip-docs.py  rip-migrations.ps1
opml/: apps.py  views.py
player/: models.py
player/migrations/: 0001_initial.py
rss/: forms.py  models.py  parsers.py  urls.py
rss/migrations/: 0001_initial.py
rss/templates/: subscriptions.html
rss/tests/: sample_feed.xml  test_models.py  (+1 more)
scripts/: docker-refresh.ps1  download-episodes.bat  e2e.ps1  episode-random.ps1  fetch-youtube-dl.ps1  import-opml.ps1  overwite-local-docker-volumes.ps1  rip-migrations.ps1  wsl-powershell-install.sh
subscriptions/: models.py
throttle/: decorators.py  models.py
timeline/: models.py  urls.py  views.py
tools/: constants.py  media.py  models.py  rss.py  storage.py
transcripts/: models.py  service.py
youtube/: models.py
(+96 files in other folders)
